--- a/style.css
+++ b/style.css
@@ -241,14 +241,14 @@ width:25%;
 /* -----------------linktabel---------------- */
 
 /*Links文章去除連結底線*/
-#aaa,
-#aaa:link,
-#aaa:visited {
+.homepage,
+.homepage:link,
+.homepage:visited {
     color: aliceblue;
     text-decoration: none
 }
 
-#aaa:hover {
+.homepage:hover {
     color: aliceblue;
     text-decoration: none;
 }
